	 settings.dat,snapshot.c,tape.c,ui.c,ui/{gtk/gtkui.c,options.dat,ui.h},
	 widget/menu.c,z80/{coretest.c,z80.c,z80_ops.c}: +D emulation
	 (part of patch #1546570) (plusd_20070609) (Stuart).
20070610 event.[ch],spectrum.c,rzx.[ch],ula.h: add RZX "sentinel" event to
	 prevent running off the end of the contention array on very long
	 frames (see bug #1057471).
20070610 widget/{memory.c,pokefinder.c,widget_internals.h}: fix up warnings.
20070610 widget/error.c: don't try and output widgets if we don't have a
	 display yet (fixes bug #1718115).
20070610 man/fuse.1: remove outdated widget-specific sections (Stuart).
20070610 keysyms.pl,ui/svga/{svgakeyboard.c,svgadisplay.c}: fix bitrot
	 (fixes bug #1727516) (Gergely Szasz).
20070610 ui/svga: ignore *.a files.
20070610 man/fuse.1: add +D documentation (plusd_20070609) (Stuart).
20070611 machines/specplus2.c: enable +D support (plusd_20070609) (Stuart).
20070611 disk/plusd.c,menu.c: check for modifications to +D disks in
	 menu_check_media_changed() (plusd_20070609) (Stuart).
20070611 machine.c,periph.c,ui.c,ui/ui.h: fix disk menu activation
	 (plusd_20070609) (Stuart).
20070612 disk/plusd.{c,h},man/fuse.1: implement +D printer port routines and
	 remove DISCiPLE-specific joystick ports (plusd_20070609) (Stuart).
20070612 printer.c: disable ZX Printer ports when the +D is available
	 (plusd_20070609) (Stuart).
20070612 disk/plusd.c: cleanup disk insertion code and add support for LibDsk's
	 "logical" driver (plusd_20070609) (Stuart).
20070612 disk/plusd.c: assume printer port is 'busy' when no printer is
	 connected (plusd_20070609) (Stuart).
20070612 man/fuse.1: document +D printer emulation (plusd_20070609) (Stuart).
20070612 periph.c: fix typo in comment (plusd_20070609) (Stuart).
20070612 disk/plusd.{c,h},menu.c,ui.c,ui/gtk/gtkui.c: remove fictitious +D
	 drives 3 and 4 (plusd_20070609) (Stuart).
20070612 menu_data.dat: remove +D drives 3 and 4 (plusd_20070609) (Stuart).